--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "jquery": "~1.10.2",
     "mustache": "~0.8.0",
     "underscore": "~1.5.2",
-    "backbone": "~1.1.0"
+    "backbone": "~1.1.0",
+    "backbone.marionette": "~1.4.1"
   },
   "devDependencies": {}
 }
